# platvision-id

./: .agent-instructions.md  .clauderc  .cursorrules  .dockerignore  .gitignore  .instructions.md  .windsurfrules  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  compose.yaml  pyproject.toml
.agent-context/prompts/: bootstrap-design.md  init-project.md
.agent-context/review-checklists/: pr-checklist.md
.agent-context/rules/: efficiency-vs-hype.md  frontend-architecture.md
.agent-context/state/: README.md  active-memory.json  memory-continuity-benchmark.json  memory-continuity.json  onboarding-report.json  token-optimization.json
.cursor/rules/: agentic-senior-core.mdc
.gemini/: instructions.md
.github/: copilot-instructions.md
.github/instructions/: agentic-senior-core.instructions.md
.windsurf/rules/: agentic-senior-core.md
datasets/: README.md  platvision-id.yaml
docs/: DESIGN.md  api-contract.md  architecture-decision-record.md  design-intent.json  docker-runbook.md  flow-overview.md  project-brief.md  roadmap.md
docs/training/: colab-training.md  dataset-notes.md  yolo-training.md
src/platvision_id/: app.py  config.py  errors.py  routes.py  training.py  wsgi.py
src/platvision_id/modules/alpr/: __init__.py  detector.py  domain.py  ocr.py  postprocessing.py  preprocessing.py  region_lookup.py  service.py  tax_lookup.py
src/platvision_id/static/: app.js  styles.css
src/platvision_id/templates/: index.html
tests/: test_api.py  test_postprocessing.py  test_service.py  test_tax_lookup.py  test_training.py
