[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "platvision-id"
version = "0.1.0"
description = "Flask demo for Indonesian ALPR using Ultralytics YOLO and PaddleOCR."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Flask>=3.1,<4",
  "gunicorn>=23,<24"
]

[project.optional-dependencies]
dev = [
  "pytest>=9,<10"
]
ml = [
  "numpy>=1.26,<3",
  "Pillow>=10,<13",
  "ultralytics>=8.3",
  "paddleocr==3.3.3",
  "paddlepaddle==3.2.0"
]

[project.scripts]
platvision-id = "platvision_id.app:main"
platvision-train-detector = "platvision_id.training:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
